# tendedero-fi-servidor

./: .gitignore  pyproject.toml  requirements.txt
src/: manage.py
src/tendedero/: asgi.py  middleware.py  settings.py  urls.py  wsgi.py
