[project]
name = "tendedero-fi"
version = "0.0.1"
mantainers = [
  { name="Campanita", email="rapunzel@disroot.org" },
]
description = "Servidor para el tendedero de la Facultad de Ingenieria"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: POSIX",
    "Framework :: Django :: 5.0",
    "Topic :: Communications"
    "Topic :: Education",
]
